# csv-diff-python3

./: .gitignore  LICENSE  README.md  index.html  requirements-release.txt  requirements-testing.txt  setup.cfg  setup.py  src_csvdiff3___init___py.html  src_csvdiff3_csvdiff_py.html  status.json
.github/workflows/: release.yml  testing.yml
appendix/csv_samples/: sample_lhs.csv  sample_rhs.csv
src/csvdiff3/: csvdiff.py
tests/: conftest.py  test__MatchingKeyCodec.py  test__MatchingKeyInfo.py  test__ValueDifferenceDetector.py  test_e2e_01_0Lines.py  test_e2e_02_1Lines.py  test_e2e_03_Reporting_count.py  test_e2e_03_Reporting_horizontal.py  test_e2e_03_Reporting_vertical.py  test_e2e_04_CSV_column_separator.py  test_e2e_04_CSV_file_encoding.py  test_e2e_04_CSV_line_break.py  test_e2e_04_CSV_quotation_mark.py  test_e2e_04_CSV_special_char_in_value.py  test_e2e_05_Option.py  test_e2e_71_for_Developer.py  test_e2e_91_Exceptional_file_path.py  test_e2e_91_Exceptional_matching_key.py  test_e2e_91_Exceptional_not_sorted.py  test_e2e_91_Exceptional_number_of_columns.py
tests/data/e2e_04_file_encoding/: left_EUC-JP.csv  left_Shift_JIS.csv  left_UTF-8.csv  right_EUC-JP.csv  right_Shift_JIS.csv  right_UTF-8.csv
tests/data/e2e_04_line_break/: left_crlf.csv  left_lf.csv  right_crlf.csv  right_lf.csv
tests/data/e2e_04_special_char/: left.csv  right.csv
